Initial commit for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
             <div class="image-content">
-                <img src="index/herooo.png" alt="Fast Delivery">
+                <img src="herooo.png" alt="Fast Delivery">
             </div>
         </section>
 
@@ -56,19 +56,19 @@
             <h1>Your Favourite Food Delivery Partner</h1>
             <div class="services-container">
                 <div class="service-item">
-                    <img src="index/order.png" alt="Easy To Order">
+                    <img src="order.png" alt="Easy To Order">
                     <h3>Easy To Order</h3>
                     <p>Ordering your favourite meal is just a few simple steps away
 
                     </p>
                 </div>
                 <div class="service-item">
-                    <img src="index/delivery.png" alt="Fastest Delivery">
+                    <img src="delivery.png" alt="Fastest Delivery">
                     <h3>Fastest Delivery</h3>
                     <p>We deliver right on time, every time. even faster. </p>
                 </div>
                 <div class="service-item">
-                    <img src="index/quality.png" alt="Best Quality">
+                    <img src="quality.png" alt="Best Quality">
                     <h3>Best Quality</h3>
                     <p>Our delivered meals aren’t just quick — they’re top quality. </p>
                 </div>
@@ -90,7 +90,7 @@
         <div class="testimonial-container">
             <div class="testimonial">
                 <div class="profile">
-                    <img src="index/Adel.jpg" alt="Mehwish">
+                    <img src="Adel.jpg" alt="Mehwish">
                     <div>
                         <h4>Adel Jumoke</h4>
                         <p>"I was pleasantly surprised by how fast everything arrived—no stress, no delays. This is how food delivery should be!"</p>
@@ -100,7 +100,7 @@
 
             <div class="testimonial highlighted">
                 <div class="profile">
-                    <img src="index/Okafor.jpeg" alt="Elizabeth Jeff">
+                    <img src="Okafor.jpeg" alt="Elizabeth Jeff">
                     <div>
                         <h4>Saliu Bilalat</h4>
                         <p><Bold>"Honestly, I didn’t expect much at first, but you guys proved me wrong. Super smooth ordering and it came piping hot!"</bold></p>
@@ -110,7 +110,7 @@
 
             <div class="testimonial">
                 <div class="profile">
-                    <img src="index/Favour.jpeg" alt="Emily Thomas">
+                    <img src="Favour.jpeg" alt="Emily Thomas">
                     <div>
                         <h4>Favour Okafor</h4>
                         <p>"I don’t have time for kitchen stress after work. This company has been my lifesaver. Everything shows up like magic!"</p>
@@ -189,28 +189,28 @@
      
         <div class="blog-cards">
             <article class="blog-card">
-                <img src="index/traffic.jpg" alt="Wake Up and Smell the Coffee">
+                <img src="traffic.jpg" alt="Wake Up and Smell the Coffee">
                 <div class="blog-content">
                     <h3><a href="#">Navigating Traffic: Our Secret to Swift Deliveries</a></h3>
                     <a href="../Blog/Traffic.html" class="read-more">Read Now</a>
                 </div>
             </article>
             <article class="blog-card">
-                <img src="index/delivery.jpg" alt="NASA Office">
+                <img src="delivery.jpg" alt="NASA Office">
                 <div class="blog-content">
                     <h3><a href="#">The NineFive Express Food Delivery Experience</a></h3>
                     <a href="../Blog/Delivery.html" class="read-more">Read Now</a>
                 </div>
             </article>
             <article class="blog-card">
-                <img src="index/Partner.jpg" alt="Saharan Sands">
+                <img src="Partner.jpg" alt="Saharan Sands">
                 <div class="blog-content">
                     <h3><a href="#">Partnering with NineFive Express</a></h3>
                     <a href="../Blog/Partner.html" class="read-more">Read Now</a>
                 </div>
             </article>
             <article class="blog-card">
-                <img src="index/social.jpg" alt="Saharan Sands">
+                <img src="social.jpg" alt="Saharan Sands">
                 <div class="blog-content">
                     <h3><a href="#">Our Commitment to Community</a></h3>
                     <a href="../Blog/Commitment.html" class="read-more">Read Now</a>
