--- a/About/about.html
+++ b/About/about.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="nav-links-container">
                         <ul class="nav-links">
-                            <li><a href="../Index.html/index.html" class="Home">Home</a></li>
+                            <li><a href="../index.html" class="Home">Home</a></li>
                             <li><a href="../Order.html/Order.html" class="Order Now">Order Now</a></li>
                             <li><a href="../About/about.html" class="About Us">About Us</a></li>
                             <li><a href="../Blog/blog.html" class="Blog">Blog</a></li>
