--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="nav-links-container">
                 <ul class="nav-links">
-                    <li><a href="../Order.html/Order.html" class="Order Now">Order Now</a></li>
-                    <li><a href="../About/about.html" class="About Us">About Us</a></li>
-                    <li><a href="../Blog/blog.html" class="Blog">Blog</a></li>
-                    <li><a href="../Contact.html/contact.html" class="Contact Us"> Contact Us</a></li>
+                    <li><a href="..Order.html/Order.html" class="Order Now">Order Now</a></li>
+                    <li><a href="..About/about.html" class="About Us">About Us</a></li>
+                    <li><a href="..Blog/blog.html" class="Blog">Blog</a></li>
+                    <li><a href="..Contact.html/contact.html" class="Contact Us"> Contact Us</a></li>
                 </ul>
             </div>
             <a href="../Partner/partner.html" class="partner-btn">Become a Partner</a>
