--- a/index.html
+++ b/index.html
@@ -20,18 +20,10 @@
             </div>
             <div class="nav-links-container">
                 <ul class="nav-links">
-<<<<<<< HEAD
-                    <li><a href="../Order.html/Order.html" class="Order Now">Order Now</a></li>
+                    <li><a href="../Order.html" class="Order Now">Order Now</a></li>
                     <li><a href="../about.html" class="About Us">About Us</a></li>
                     <li><a href="../blog.html" class="Blog">Blog</a></li>
                     <li><a href="../contactt.html" class="Contact Us"> Contact Us</a></li>
-=======
-                    <li><a href="..Order.html/Order.html" class="Order Now">Order Now</a></li>
-                    <li><a href="..About/about.html" class="About Us">About Us</a></li>
-                    <li><a href="..Blog/blog.html" class="Blog">Blog</a></li>
-                    <li><a href="..Contact.html/contact.html" class="Contact Us"> Contact Us</a></li>
->>>>>>> 1913a0db73e4dd78f02ace7b4022d2daad1dbedc
-                </ul>
             </div>
             <a href="../partner.html" class="partner-btn">Become a Partner</a>
         <div class="hamburger">&#9776;</div>
